# metahub-test

./: .gitignore  CLAUDE.md  README.md  database_schema.sql  generate_erd.py  generated_schema.sql  main.py  metahub_schema.dbml  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 20250901_183039_complete_schema_with_merged_terms.py  bb5c2ac77950_initial_clean_migration.py
app/: main.py
app/api/v1/: __init__.py  bootstrap.py  codeset.py  health.py  meta_types.py  meta_values.py  meta_values_improved.py  taxonomy.py
app/core/: config.py  database.py  decorators.py  deps.py  meta_types.py
app/db/: base.py  session.py
app/models/: __init__.py  codeset.py  meta_types.py  meta_values.py  taxonomy.py
app/repositories/: meta_value_repository.py
app/schemas/: base.py
app/services/: bootstrap_service.py  meta_value_business_service.py  meta_value_service.py  term_service.py  utils.py
tests/: conftest.py
tests/api/: test_api_functionality.py  test_health.py  test_taxonomy.py
tests/integration/: test_api_performance.py  test_api_security.py  test_full_api_integration.py
tests/unit/: test_services.py
